--- a/Surfaces_1/app/src/main/res/layout/activity_main.xml
+++ b/Surfaces_1/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,14 @@
             android:layout_margin="16dp"
             android:background="#fff"
             android:elevation="4dp">
+        </FrameLayout>
 
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_margin="16dp"
+            android:background="#fff"
+            android:elevation="6dp">
         </FrameLayout>
 
     </LinearLayout>
