--- a/Surfaces_2/app/src/main/res/values/styles.xml
+++ b/Surfaces_2/app/src/main/res/values/styles.xml
@@ -2,7 +2,8 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+
+        <item name="android:colorPrimary">#ff0000</item>
     </style>
 
 </resources>
